...
    }

    Column(
        modifier = Modifier.align(Alignment.CenterStart).padding(start = 16.dp, top = 320.dp),
        verticalArrangement = Arrangement.spacedBy(24.dp)) {
          StyledButton(
              text = " Add to folder", iconRes = R.drawable.add, testTag = "addToFolderButton") {
                showBottomMenu(
                    context, folderViewModel, backgroundColor, surfaceColor, onSurfaceColor) {
                      bitmap?.let { bmp ->
                        val byteArray = imageBitmapToByteArray(bmp)
                        val photo = Photo(ownerId, byteArray, path)
                        photoViewModel.savePhoto(
...
                  videoViewModel.saveVideo(video, onSuccess = { mediaSavedToast(context, "Video") })
                  navigationActions.goBack()
                  navigationActions.goBack()
                  navigationActions.goBack()
                }
              },
              modifier = Modifier.weight(1f).height(56.dp).testTag("saveButton"),
              colors = ButtonDefaults.buttonColors(containerColor = Color.LightGray),
              shape = RoundedCornerShape(8.dp)) {
                Text(
                    text = "Save",
                    style =
                        TextStyle(
...
