...

  // Set the inflated view as the content of the BottomSheetDialog
  bottomSheetDialog.setContentView(
      ComposeView(context).apply {
        setBackgroundColor(backgroundColor.toArgb())
        setContent {
          Column(modifier = Modifier.padding(16.dp).fillMaxWidth().testTag("button_container")) {
            folders.forEach { folder ->
              Card(
                  modifier =
                      Modifier.padding(8.dp)
                          .fillMaxWidth()
                          .clickable {
...
